unpackaged/main/default/objects/ProfitStarsIntegration__c/ProfitStarsIntegration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains the needed information to integrate with Profit stars</description>
    <label>Profitstars Integration</label>
</CustomObject>