unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>Request Email</description>
    <label>email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>