unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <label>Entity ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>