unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Integration_Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Integration_Agent_Email_Address__c</fullName>
    <label>Integration Agent Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>