unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Integration_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Agent_Name__c</fullName>
    <label>Integration Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>