unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Integration_Agent_Role__c.field-meta.xml
<CustomField>
    <fullName>Integration_Agent_Role__c</fullName>
    <label>Integration Agent Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>