unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Maint_Pal_ID__c.field-meta.xml
<CustomField>
    <fullName>Maint_Pal_ID__c</fullName>
    <label>Maint Pal ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>