unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Maintenance_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Agent_ID__c</fullName>
    <label>Maintenance Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>