unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Maintenance_Agent_Role__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Agent_Role__c</fullName>
    <label>Maintenance Agent Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>