unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Maintenance_Password__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Password__c</fullName>
    <label>Maintenance Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>