unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Maintenance_Username__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Username__c</fullName>
    <label>Maintenance Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>