unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/PalId__c.field-meta.xml
<CustomField>
    <fullName>PalId__c</fullName>
    <description>PAL id from profit stars</description>
    <label>PalId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>