unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/ProfitStar_Error_Email__c.field-meta.xml
<CustomField>
    <fullName>ProfitStar_Error_Email__c</fullName>
    <description>Email address to send the error/exception response</description>
    <label>ProfitStar Error Email</label>
    <type>Email</type>
</CustomField>