unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Url_domain__c.field-meta.xml
<CustomField>
    <fullName>Url_domain__c</fullName>
    <description>stores the URL endpoint for this configuration.</description>
    <label>URL Domain</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>