unpackaged/main/default/objects/ProfitStarsIntegration__c/fields/Use_SF_Logic__c.field-meta.xml
<CustomField>
    <fullName>Use_SF_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if we are going to use the Salesforce apex code or the mulesoft flows to process the records. - R2030880</description>
    <label>Use SF Logic</label>
    <type>Checkbox</type>
</CustomField>